Bug #48805
mds: "cluster [WRN] Scrub error on inode 0x1000000039d (/client.0/tmp/blogbench-1.0/src/blogtest_in) see mds.a log and `damage ls` output for details"
% Done:
0%
Source:
Q/A
Tags:
Backport:
pacific,octopus,nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
qa-failure, scrub, task(medium)
Pull request ID:
Crash signature:
Description
2021-01-03T05:03:38.865 INFO:teuthology.orchestra.run.smithi191.stdout:2021-01-03T05:00:26.188079+0000 mds.a (mds.0) 124 : cluster [WRN] Scrub error on inode 0x1000000039d (/client.0/tmp/blogbench-1.0/src/blogtest_in) see mds.a log and `damage ls` output for details
From: /ceph/teuthology-archive/teuthology-2021-01-03_03:15:02-fs-master-distro-basic-smithi/5751921/teuthology.log
Thought we had an issue for this already but I could not find it. Milind is working on this.
History
#1 Updated by Patrick Donnelly 19 days ago
- Labels (FS) qa-failure, scrub, task(medium) added
#2 Updated by Patrick Donnelly 12 days ago
- Target version changed from v16.0.0 to v17.0.0
- Backport changed from octopus,nautilus to pacific,octopus,nautilus