mds/scrub: background scrub error fixes

Accommodate new files and raw stats errors for dirty inodes and declare
scrub as passed.

Fixes: https://tracker.ceph.com/issues/48805
Signed-off-by: Milind Changire <mchangir@redhat.com>
(cherry picked from commit 4748053249d8b7b319ca3b36ec5a222ba6b9acef)

Conflicts:
        src/mds/CInode.cc
- changed "in->get_inode()->nlink" to "in->get_inode().nlink"